--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,17 +17,26 @@ a {
 
 .container {
   /* Ubah max-width ke 1170px */
-  
+
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
+.container h1 {
+  color: LightGreen;
+  font-weight: weight;
+}
+
+.container p {
+  color: LightBlue;
+  font-size: 20px;
+}
+
 
 .top-wrapper {
   padding: 180px 0 100px 0;
   background-image: url('banner1.jpg');
   background-size: cover;
-  color: white;
   text-align: center;
 }
 
