--- a/responsive.css
+++ b/responsive.css
@@ -4,11 +4,11 @@
     width: 50%;
     margin-bottom: 50px;
   }
-  
+
   .top-wrapper h1 {
     font-size: 32px;
   }
-  
+
   .heading h2 {
     font-size: 20px;
   }
@@ -19,28 +19,37 @@
   .lesson {
     width: 100%;
   }
-  
+
   footer {
     text-align: center;
   }
-  
+
   .btn {
     width: 100%;
   }
-  
+  /* Tambahkan CSS untuk header-right */
+  .header-right {
+    display: none;
+  }
+
+  /* Tambahkan CSS untuk menu-icon */
+  .menu-icon {
+    display: block;
+  }
+
   .facebook {
     margin-bottom: 10px;
   }
-  
+
   .top-wrapper {
     text-align: left;
   }
-  
+
   .top-wrapper h1 {
     font-size: 24px;
     line-height: 36px;
   }
-  
+
   .top-wrapper p {
     font-size: 14px;
     line-height: 20px;
