--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,14 @@ a {
   font-size: 20px;
 }
 
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  /* Gantikan property display ke none */
+  display: none;
+}
 
 .top-wrapper {
   padding: 180px 0 100px 0;
